Added new page for suppliers

--- a/application.json
+++ b/application.json
@@ -29,6 +29,10 @@
     {
       "id": "All Products",
       "isDefault": true
+    },
+    {
+      "id": "Suppliers",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
