Completed the Suppliers table

--- a/application.json
+++ b/application.json
@@ -33,6 +33,10 @@
     {
       "id": "Suppliers",
       "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
