--- a/pages/All Products/widgets/Table_Key/not_applicable/not_applicable.json
+++ b/pages/All Products/widgets/Table_Key/not_applicable/not_applicable.json
@@ -68,6 +68,8 @@
   "mobileRightColumn": 27,
   "mobileTopRow": 17,
   "needsErrorInfo": false,
+  "originalBottomRow": 8,
+  "originalTopRow": 4,
   "parentColumnSpace": 35.328125,
   "parentId": "zluz6lnc8c",
   "parentRowSpace": 10,
