Created a customers table to view all customers registered on website and update their power BI links

--- a/application.json
+++ b/application.json
@@ -37,6 +37,10 @@
     {
       "id": "Home",
       "isDefault": true
+    },
+    {
+      "id": "Customers",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
