Created Asset Replacement Manager page

--- a/application.json
+++ b/application.json
@@ -41,6 +41,10 @@
     {
       "id": "Customers",
       "isDefault": false
+    },
+    {
+      "id": "BER Assets",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
