Completed modal that shows associated products to a Label/Product addon

--- a/application.json
+++ b/application.json
@@ -49,6 +49,10 @@
     {
       "id": "SL POOR Assets",
       "isDefault": false
+    },
+    {
+      "id": "Product Extras",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
