Duplicated all products page, and renamed to All Products - Accessories. This page will be for managing accessories only.

--- a/application.json
+++ b/application.json
@@ -53,6 +53,10 @@
     {
       "id": "Product Extras",
       "isDefault": false
+    },
+    {
+      "id": "All Products - Accessories",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
