Created new Orders and Quotes page. Imported and tested new custom endpoint to get orders

--- a/application.json
+++ b/application.json
@@ -57,6 +57,10 @@
     {
       "id": "All Products - Accessories",
       "isDefault": false
+    },
+    {
+      "id": "Orders & Quotes",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
