Added Orders & Quotes page v2

--- a/application.json
+++ b/application.json
@@ -61,6 +61,10 @@
     {
       "id": "Orders & Quotes",
       "isDefault": false
+    },
+    {
+      "id": "Orders & Quotes v2",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
