Fixed the loading issue of customer locations on the customers page

--- a/application.json
+++ b/application.json
@@ -63,7 +63,7 @@
       "isDefault": false
     },
     {
-      "id": "Orders & Quotes v2",
+      "id": "Edit Order or Quote",
       "isDefault": false
     }
   ],
