Added new button and created new page for adding a product to the website

--- a/application.json
+++ b/application.json
@@ -69,6 +69,10 @@
     {
       "id": "Siclops Equipment Lookup",
       "isDefault": false
+    },
+    {
+      "id": "Add New Products",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
